fixed inauguration badge spacing issue

--- a/src/app/pages/home/home.page.scss
+++ b/src/app/pages/home/home.page.scss
@@ -164,7 +164,7 @@ $breakpoint-tablet: 767px;
   .badge-space {
     width: 100%;
     position: absolute;
-    top: 37%;
+    top: 39%;
     display: flex;
     justify-content: center;
   }
